add recipe types and about me

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -2,7 +2,11 @@
 @import url("https://use.typekit.net/fmn5gjk.css");
 
 // add global styles
+@import 'styles/scss/functions';
 @import 'styles/scss/global';
+
 
 // add elements
 @import 'styles/scss/elements/hero';
+@import 'styles/scss/elements/recipe-types';
+@import 'styles/scss/elements/about-me';
