--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -10,3 +10,5 @@
 @import 'styles/scss/elements/hero';
 @import 'styles/scss/elements/recipe-types';
 @import 'styles/scss/elements/about-me';
+@import 'styles/scss/elements/food-blog';
+@import 'styles/scss/elements/button';
