--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -12,3 +12,4 @@
 @import 'styles/scss/elements/about-me';
 @import 'styles/scss/elements/food-blog';
 @import 'styles/scss/elements/button';
+@import 'styles/scss/elements/last-videos';
