--- a/styles/scss/elements/_button.scss
+++ b/styles/scss/elements/_button.scss
@@ -1,10 +1,11 @@
 .button {
   border: 2px solid #{$primary};
   font-size: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: max-content;
   &-item {
     text-transform: uppercase;
   }
