--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -13,3 +13,5 @@
 @import 'styles/scss/elements/food-blog';
 @import 'styles/scss/elements/button';
 @import 'styles/scss/elements/last-videos';
+@import 'styles/scss/elements/footer';
+@import 'styles/scss/elements/social-media';
