add social Media to the hero

--- a/styles/scss/elements/_hero.scss
+++ b/styles/scss/elements/_hero.scss
@@ -36,4 +36,10 @@
     height: 100%;
     object-fit: cover;
   }
+  .social-media {
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+    right: 0;
+  }
 }
