--- a/styles/scss/_functions.scss
+++ b/styles/scss/_functions.scss
@@ -1,13 +1,13 @@
 @mixin breakpoint-up($size) {
   @if $size == sm {
-    @media (max-width: 599px) { @content; }
+    @media (min-width: 599px) { @content; }
   } @else if $size == md {
-    @media (max-width: 600px) { @content; }
+    @media (min-width: 600px) { @content; }
   } @else if $size == lg {
-    @media (max-width: 900px) { @content; }
+    @media (min-width: 900px) { @content; }
   } @else if $size == xl {
-    @media (max-width: 1200px) { @content; }
+    @media (min-width: 1200px) { @content; }
   } @else if $size == xxl {
-    @media (max-width: 1600px) { @content; }
+    @media (min-width: 1600px) { @content; }
   }
 }
