--- a/styles/scss/_functions.scss
+++ b/styles/scss/_functions.scss
@@ -7,6 +7,8 @@
     @media (min-width: 900px) { @content; }
   } @else if $size == xl {
     @media (min-width: 1200px) { @content; }
+  } @else if $size == xlmd {
+    @media (min-width: 1400px) { @content; }
   } @else if $size == xxl {
     @media (min-width: 1600px) { @content; }
   }
