--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -5,48 +5,93 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1400px;
+  width: 90%;
+  @include  breakpoint-up(lg) {
+    width: 890px;
+  }
+  @include  breakpoint-up(xl) {
+    width: 1190px;
+  }
+  @include  breakpoint-up(xxlmd) {
+    width: 1350px;
+  }
   @include  breakpoint-up(xxl) {
-    width: 1600px;
+    width: 1590px;
   }
 }
 
 $primary: #FFD334;
 
 %space-top {
-  margin-top: 150px;
+  margin-top: 100px;
+  @include breakpoint-up(md) {
+    margin-top: 150px;
+  }
 }
 
 %headline {
-  font-size: 60px;
   text-transform: uppercase;
   width: 100%;
   text-align: center;
   position: relative;
   z-index: 1;
   font-weight: 300;
-  margin-bottom: 130px;
+  margin-bottom: 50px;
+  font-size: 30px;
+  @include breakpoint-up(md) {
+    font-size: 40px;
+    margin-bottom: 100px;
+  }
+  @include breakpoint-up(lg) {
+    font-size: 50px;
+  }
+  @include  breakpoint-up(xl) {
+    font-size: 60px;
+    margin-bottom: 130px;
+  }
   &:after {
     content: '';
-    width: 250px;
     height: 4px;
     position: absolute;
     background-color: $primary;
     left: 0;
     right: 0;
-    bottom: -80px;
+    bottom: -25px;
     margin-left: auto;
     margin-right: auto;
+    width: 125px;
+    @include  breakpoint-up(md) {
+      width: 180px;
+      bottom: -50px;
+    }
+    @include breakpoint-up(lg) {
+      width: 200px;
+    }
+    @include breakpoint-up(xl) {
+      bottom: -80px;
+      width: 250px;
+    }
   }
   em {
-    font-size: 150px;
     font-family: 'suave-script-pro';
     color: #DBDBDB;
     position: absolute;
-    top: -20px;
     left: 0;
     right: 0;
     z-index: -1;
+    top: 0px;
+    font-size: 50px;
+    @include breakpoint-up(md) {
+      font-size: 80px;
+      top: -5px;
+    }
+    @include breakpoint-up(lg) {
+      font-size: 100px;
+    }
+    @include breakpoint-up(xl) {
+      font-size: 150px;
+      top: -20px;
+    }
   }
 }
 
@@ -63,9 +108,12 @@ $primary: #FFD334;
   &-description{
     @extend%text !optional;
     text-align: center;
-    width: 60%;
+    width: 75%;
     margin-right: auto;
     margin-left: auto;
+    @include breakpoint-up(xl) {
+      width: 60%;
+    }
   }
 }
 .headline-small {
