--- a/styles/scss/elements/_about-me.scss
+++ b/styles/scss/elements/_about-me.scss
@@ -4,8 +4,17 @@
     margin-top: 50px;
     &-img {
       width: 100%;
-      height: 700px;
+      height: 250px;
       overflow: hidden;
+      @include breakpoint-up(md) {
+        height: 300px;
+      }
+      @include breakpoint-up(lg) {
+        height: 500px;
+      }
+      @include breakpoint-up(xl) {
+        height: 700px;
+      }
       &-item {
         object-fit: cover;
         width: 100%;
@@ -14,11 +23,13 @@
     }
     &-text {
       width: 80%;
-      column-count: 2;
-      column-gap: 10px;
       margin-left: auto;
       margin-right: auto;
       margin-top: 50px;
+      @include breakpoint-up(md) {
+        column-gap: 10px;
+        column-count: 2;
+      }
       p {
         margin-top: 0;
         margin-bottom: 0;
