--- a/styles/scss/elements/_food-blog.scss
+++ b/styles/scss/elements/_food-blog.scss
@@ -4,17 +4,31 @@
     margin-top: 50px;
     .food-post {
       width: 100%;
-      height: 600px;
       border: 2px solid #{$primary};
       margin-bottom: 120px;
       display: flex;
+      flex-direction: column;
+      @include breakpoint-up(lg) {
+        flex-direction: row;
+        height: 500px;
+      }
+      @include breakpoint-up(xl) {
+        height: 600px;
+      }
       &:last-of-type {
         margin-bottom: unset;
       }
       &-image {
-        width: 35%;
-        height: 100%;
+        width: 100%;
+        height: 250px;
         overflow: hidden;
+        @include breakpoint-up(md) {
+          height: 300px;
+        }
+        @include breakpoint-up(lg) {
+          width: 35%;
+          height: 100%;
+        }
         &-item {
           width: 100%;
           height: 100%;
@@ -22,20 +36,41 @@
         }
       }
       &-content {
-        width: 65%;
-        padding: 40px;
+        width: 100%;
+        padding: 20px;
+        @include breakpoint-up(md) {
+          padding: 40px;
+        }
+        @include breakpoint-up(lg) {
+          width: 65%;
+        }
         &-text {
           padding-left: 20px;
           padding-right: 20px;
           @extend%text !optional;
+          font-size: 18px;
+          @include breakpoint-up(xl) {
+            font-size: 20px;
+          }
         }
         &-links {
           padding-left: 20px;
-          margin-top: 80px;
+          margin-top: 60px;
           display: flex;
+          flex-direction: column;
+          @include breakpoint-up(md) {
+            flex-direction: row;
+          }
+          @include breakpoint-up(xl) {
+            margin-top: 80px;
+          }
           .button {
             &:first-of-type {
-              margin-right: 50px;
+              margin-bottom: 20px;
+              @include breakpoint-up(md) {
+                margin-right: 50px;
+                margin-bottom: unset;
+              }
             }
           }
         }
