--- a/styles/scss/elements/_last-videos.scss
+++ b/styles/scss/elements/_last-videos.scss
@@ -4,13 +4,25 @@
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     .video-post {
-      width: 30%;
+      width: 100%;
       border: 2px solid #{$primary};
+      margin-bottom: 50px;
+      @include breakpoint-up(lg) {
+        width: 30%;
+        margin-bottom: unset;
+      }
       &-img {
         width: 100%;
-        height: 380px;
+        height: 250px;
         overflow: hidden;
+        @include breakpoint-up(md) {
+          height: 300px;
+        }
+        @include breakpoint-up(lg) {
+          height: 380px;
+        }
         &-item {
           object-fit: cover;
           width: 100%;
@@ -20,25 +32,41 @@
       &-content {
         &-headline {
           text-align: center;
-          font-size: 30px;
-          margin-top: 80px;
-          margin-bottom: 50px;
+          font-size: 25px;
+          margin-top: 40px;
+          margin-bottom: 25px;
           text-transform: uppercase;
+          @include breakpoint-up(md) {
+            font-size: 30px;
+          }
+          @include breakpoint-up(lg) {
+            margin-bottom: 50px;
+            margin-top: 80px;
+          }
         }
         &-text {
           @extend%text !optional;
-          width: 75%;
+          width: 85%;
           margin-right: auto;
           margin-left: auto;
           text-align: center;
           margin-top: 0;
           margin-bottom: 0;
+          font-size: 18px;
+          @include breakpoint-up(xl) {
+            font-size: 20px;
+            width: 75%;
+          }
         }
         .button {
           margin-left: auto;
           margin-right: auto;
-          margin-top: 80px;
-          margin-bottom: 80px;
+          margin-top: 40px;
+          margin-bottom: 40px;
+          @include breakpoint-up(lg) {
+            margin-top: 80px;
+            margin-bottom: 80px;
+          }
         }
       }
     }
