--- a/styles/scss/elements/_social-media.scss
+++ b/styles/scss/elements/_social-media.scss
@@ -3,8 +3,12 @@
   display: flex;
   justify-content: center;
   &-link {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
+    @include breakpoint-up(md) {
+      margin-left: 50px;
+      margin-right: 50px;
+    }
     &:first-of-type {
       margin-left: unset;
     }
