--- a/styles/scss/elements/_footer.scss
+++ b/styles/scss/elements/_footer.scss
@@ -89,6 +89,7 @@
       &-item {
         margin-left: 5px;
         margin-right: 5px;
+        display: flex;
         span {
           visibility: hidden;
           display: none;
