--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -15,3 +15,7 @@
 @import 'styles/scss/elements/last-videos';
 @import 'styles/scss/elements/footer';
 @import 'styles/scss/elements/social-media';
+
+
+// add pages
+@import 'styles/scss/pages/page';
