add desctop menu

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -15,6 +15,7 @@
 @import 'styles/scss/elements/last-videos';
 @import 'styles/scss/elements/footer';
 @import 'styles/scss/elements/social-media';
+@import 'styles/scss/elements/nav';
 
 
 // add pages
