--- a/styles/scss/elements/_nav.scss
+++ b/styles/scss/elements/_nav.scss
@@ -2,22 +2,44 @@
   position: fixed;
   z-index: 10;
   width: 100%;
-
-  background-color: #f0f0f0;
-  height: 75px;
   font-size: 30px;
-  opacity: 0.8;
+  opacity: 1;
+  height: 100vh;
+  @include breakpoint-up(lg) {
+    background-color: #f0f0f0;
+    height: 75px;
+    opacity: 0.8;
+  }
   &-content {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
     list-style: none;
     margin: unset;
+    padding: unset;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    visibility: visible;
+    position: absolute;
+    flex-direction: column;
+    background-color: $primary;
+    justify-content: center;
+    transform: translateX(100vw);
+    transition: all 0.5s ease-in-out;
+    @include breakpoint-up(lg) {
+      transform: unset;
+      justify-content: space-around;
+      position: unset;
+      flex-direction: row;
+      background-color: unset;
+    }
+    &.open {
+      transform: translateX(0)
+    }
     &-item {
       line-height: 75px;
       text-transform: uppercase;
       font-weight: 300;
       position: relative;
+      text-align: center;
       &:hover {
         &:after {
           width: 100%;
@@ -40,4 +62,22 @@
       }
     }
   }
+  .hamburger-react {
+    position: absolute;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: auto;
+    margin-bottom: auto;
+    display: block;
+    visibility: visible;
+    @include breakpoint-up(lg) {
+      display: none;
+      visibility: hidden;
+    }
+  }
+}
+
+.scroll-disable {
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
